# tanoshi-extensions

./: .gitignore  Guya.mjs  MangaDex.mjs  MangaLife.mjs  MangaSee.mjs  Manhwa18cc.mjs  NHentai.mjs  Readme.md  go.mod  index.json  source.json
.github/workflows/: build.yml
catmanga/: Cargo.toml
catmanga/src/: main.rs
common/madara/src/: lib.rs
common/wpmangareader/src/: lib.rs
common/wpmangastream/src/: lib.rs
extensions/1stkissmanhua/: Cargo.toml
extensions/1stkissmanhua/src/: lib.rs
extensions/365Manga/: Cargo.toml
extensions/365Manga/src/: lib.rs
extensions/alphascans/src/: lib.rs
extensions/isekaiscan/: Cargo.toml
extensions/isekaiscan/src/: lib.rs
extensions/leviatanscan/: Cargo.toml
extensions/leviatanscan/src/: lib.rs
extensions/mangatx/: Cargo.toml
extensions/mangatx/src/: lib.rs
extensions/manhuafast/: Cargo.toml
extensions/manhuafast/src/: lib.rs
extensions/manhwa18cc/: Cargo.toml
extensions/manhwa18cc/src/: lib.rs
extensions/mmscans/: Cargo.toml
extensions/reaperscan/: Cargo.toml
extensions/tritiniascans/: Cargo.toml
mangadex/: Cargo.toml
mangalife/: Cargo.toml
mangasee/: Cargo.toml
nhentai/: Cargo.toml
source/Mangadex/: Mangadex.lua
source/mangadex/: mangadex.lua
x86_64-apple-darwin/: alphascans.dylib  asurascans.dylib  firstkissmanhua.dylib  guya.dylib  isekaiscan.dylib  leviatanscan.dylib  leviatanscans.dylib  mangatx.dylib  manhuafast.dylib  manhwa18cc.dylib  mmscans.dylib  nhentai.dylib  reaperscan.dylib  reaperscans.dylib  three_sixty_five_manga.dylib  tritiniascans.dylib
(+3 files in other folders)
