[package]
name = "three_sixty_five_manga"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tanoshi-lib = "0.27.0"
madara = { path = "../../common/madara" }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
scraper = "0.12.0"
anyhow = "1"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
lazy_static = "1"
log = "0.4"
